--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -4,8 +4,10 @@
 one:
   title: Post one title
   body: Post one Body
+  author: one
 
 two:
   title: Post two title
   body: Post two Body
+  author: one
 
