--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,10 +7,10 @@
 #
 one:
   email: userone@email.com
-  # password: password
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 # column: value
 #
 two:
   email: usertwo@email.com
-  # password: ppaasswwoorrdd
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 #  column: value
