--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -5,9 +5,11 @@ one:
   title: Post one title
   body: Post one Body
   author: one
+  published: true
 
 two:
   title: Post two title
   body: Post two Body
   author: one
+  published: true
 
