--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -14,3 +14,14 @@ two:
   email: usertwo@email.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 #  column: value
+
+author:
+  email: author@email.com
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+  role: author
+
+editor:
+  email: editor@email.com
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+  role: editor
+
