--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -25,3 +25,8 @@ editor:
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
   role: editor
 
+rando:
+  email: rando@email.com
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+  role: rando
+
