all create post tests working...mostly

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,32 +1,24 @@
-# Read about fixtures at
-# http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
 one:
   email: userone@email.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
-  # role: user
+  role: user
 
 user:
   email: user@user.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
-  # role: user
+  role: user
 
 author:
   email: author@author.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
-  # role: author
+  role: author
 
 editor:
   email: editor@editor.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
-  # role: editor
+  role: editor
 
 spammer:
   email: spammer@spammer.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
-  # role: user
-
+  role: user
