--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,10 +1,7 @@
-# Read about fixtures at
-# http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
 one:
   title: Post one title
   body: Post one Body
-  # author: author
+  author: author
   published: true
 
 two:
